tests/ui/wf/ice-hir-wf-check-anon-const-issue-122199.stderr
error[E0403]: the name `N` is already used for a generic parameter in this item's generic parameters
  --> $DIR/ice-hir-wf-check-anon-const-issue-122199.rs:4:18
   |
LL | trait Trait<const N: Trait = bar> {
   |                   - first use of `N`
...
LL |     fn fnc<const N: Trait = u32>(&self) -> Trait {
   |                  ^ already used

error[E0425]: cannot find value `bar` in this scope
  --> $DIR/ice-hir-wf-check-anon-const-issue-122199.rs:1:30
   |
LL | trait Trait<const N: Trait = bar> {
   |                              ^^^ not found in this scope

error[E0423]: expected value, found builtin type `u32`
  --> $DIR/ice-hir-wf-check-anon-const-issue-122199.rs:4:29
   |
LL |     fn fnc<const N: Trait = u32>(&self) -> Trait {
   |                             ^^^ not a value

error[E0425]: cannot find value `bar` in this scope
  --> $DIR/ice-hir-wf-check-anon-const-issue-122199.rs:8:9
   |
LL |         bar
   |         ^^^ not found in this scope

error: defaults for const parameters are only allowed in `struct`, `enum`, `type`, or `trait` definitions
  --> $DIR/ice-hir-wf-check-anon-const-issue-122199.rs:4:12
   |
LL |     fn fnc<const N: Trait = u32>(&self) -> Trait {
   |            ^^^^^^^^^^^^^^^^^^^^

error[E0391]: cycle detected when determining object safety of trait `Trait`
  --> $DIR/ice-hir-wf-check-anon-const-issue-122199.rs:1:1
   |
LL | trait Trait<const N: Trait = bar> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: ...which requires check whether the item has a `where Self: Sized` bound...
  --> $DIR/ice-hir-wf-check-anon-const-issue-122199.rs:4:5
   |
LL |     fn fnc<const N: Trait = u32>(&self) -> Trait {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: ...which requires computing predicates of `Trait::fnc`...
  --> $DIR/ice-hir-wf-check-anon-const-issue-122199.rs:4:5
   |
LL |     fn fnc<const N: Trait = u32>(&self) -> Trait {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: ...which requires computing predicates of `Trait::fnc`...
  --> $DIR/ice-hir-wf-check-anon-const-issue-122199.rs:4:5
   |
LL |     fn fnc<const N: Trait = u32>(&self) -> Trait {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: ...which requires computing explicit predicates of `Trait::fnc`...
  --> $DIR/ice-hir-wf-check-anon-const-issue-122199.rs:4:5
   |
LL |     fn fnc<const N: Trait = u32>(&self) -> Trait {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: ...which requires computing type of `Trait::fnc::N`...
  --> $DIR/ice-hir-wf-check-anon-const-issue-122199.rs:4:12
   |
LL |     fn fnc<const N: Trait = u32>(&self) -> Trait {
   |            ^^^^^^^^^^^^^^^^^^^^
   = note: ...which again requires determining object safety of trait `Trait`, completing the cycle
note: cycle used when computing type of `Trait::N`
  --> $DIR/ice-hir-wf-check-anon-const-issue-122199.rs:1:13
   |
LL | trait Trait<const N: Trait = bar> {
   |             ^^^^^^^^^^^^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0391, E0403, E0423, E0425.
For more information about an error, try `rustc --explain E0391`.
